fix(okp4): fix border radius on safari

--- a/src/assets/styles/pages/learn/_okp4.scss
+++ b/src/assets/styles/pages/learn/_okp4.scss
@@ -291,6 +291,15 @@
       grid-template: revert;
       border-radius: 20px;
     }
+
+    .okp4__section__image {
+      img {
+        border-radius: 40px 0 0 40px;
+        @include media-bp-down(lg) {
+          border-radius: 20px 20px 0 0;
+        }
+      }
+    }
   }
 
   .okp4__know {
